# pchat

./: .gitignore  Cargo.toml  Readme.md  config.toml
src/: main.rs
src/pchat/: cli.rs  config_parse.rs  get_project_context.rs  mod.rs
