[package]
name = "pchat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39" }
home = "0.5.11"
ollama-rs = { version = "0.3.1", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.8.22"
walkdir = "2.5.0"
